test/compile_errors/err_channel_send_rc_value.w
//! expect-error: channel send requires Send value

use std.rc

fn main:
    let local = Rc.new(1)
    send(0, local)
